<resources>
    <string name="app_name">Firebase Dynamic Links</string>

    <string name="share_dynamic_link">Share Dynamic Link</string>
    <string name="share_short_link">Share Short Dynamic Link</string>
    <string name="generate_short_link">Generate Short Dynamic Link</string>
    <string name="dynamic_link">Dynamic Link</string>
    <string name="short_dynamic_link">Short Dynamic Link</string>
    <string name="title_receive">Deeplink Received</string>
    <string name="msg_no_deep_link">No deep link received.</string>
</resources>
